--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,19 @@
 header{
+    position: fixed;
+    background-color: white;
+    z-index: 1;
+    width: 100%;
     display: flex;
+    top: 0%;
+    left: 0%;
+}
+body{
+    height: fit-content;
+    width: fit-content;
+}
+
+#space{
+    height: 100px;
 }
 #imgContainer{
     display: flex;
@@ -8,32 +22,37 @@ header{
     transition: right 1s ease;
 
 }
+
 #imgContainer img{
     flex-grow: 1;
     flex-shrink: 0;
     border-radius: 15px;
-    width: 1050px;
     height: 350px;
 }
 #intro{
     position: absolute;
-    z-index: 1;
+    height: 100%;
+    width: 100%;
+    z-index: 5;
+    left: 0%;
+
 }
 #whiteBox{
     position: absolute;
-    width: 100vw;
-    height: 1000px;
+    top: -2%;
+    width: 100%;
+    height: 100%;
     background-color:white;
 }
 #intrologo{
     position: absolute;
     z-index: 3;
-    top: 50%;
-    left: 95%;
+    top: 100px;
+    left: 35%;
     transition: left 2.5s ease;
 }
 #introtext{
-    position:relative;
+    position:absolute;
     left: 0%;
     top: 300px;
     transition: left 2.5s ease;
@@ -50,7 +69,10 @@ header{
 }
 
 
-
+#content{
+    width: fit-content;
+    height: fit-content;
+}
 
 #logo{
     margin-left: 30px;
@@ -91,4 +113,7 @@ header{
 #content{
     padding-left: 50px;
     padding-right: 50px;
+}
+button:hover{
+    background-color: red;
 }
