--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@ body{
     height: fit-content;
     width: fit-content;
 }
+#white{
+    background-color: white;
+    position: absolute;
+    z-index: 2;
+    left: 0%;
+    height: 100%;
+    width: 150px;
+    transition: left 2.5s ease;
+}
 
 #space{
     height: 100px;
@@ -75,11 +84,19 @@ body{
 }
 
 #logo{
+    position: relative;
     margin-left: 30px;
+    left: 0%;
+    z-index: 3;
+    transition: left 2.5s ease;
+    
+    
 }
 #logoText{
     position: relative;
-
+    left: 0%;
+    z-index: 1;
+    transition: left 2.5s ease;    
 }
 #buttons{
     display: flex;
