--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,8 @@ li{
     gap: 1000px;
     position: relative;
     padding-bottom: 20px;
-
+    
+    
 
 }
 
@@ -64,6 +65,8 @@ li{
     flex-shrink: 0;
     border-radius: 15px;
     height: 350px;
+    border: solid 5px lightgray ;
+    
 }
 #intro{
     position: absolute;
